--- a/slides.tex
+++ b/slides.tex
@@ -1,5 +1,5 @@
 % Enable warnings about problematic code
-\RequirePackage[l2tabu, orthodox]{nag}
+\RequirePackage[l2tabu,aspectratio=169,orthodox]{nag}
 
 \documentclass{WeSTpresentation}
 
