--- a/slides_wide.tex
+++ b/slides_wide.tex
@@ -1,7 +1,7 @@
 % Enable warnings about problematic code
 \RequirePackage[l2tabu,orthodox]{nag}
 
-\documentclass{WeSTpresentation}
+\documentclass[aspectratio=169]{WeSTpresentation}
 
 \newcommand*\mailto[1]{\href{mailto:#1}{\nolinkurl{#1}}}
 
